--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -5,7 +5,40 @@
 @import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 
 body {
-  background-image: url($image-base + 'body-bg.png');
+  background-image: url($image-base + 'topography.png');
   background-repeat: repeat;
   background-position: top left;
+}
+
+.logo {
+  display: block;
+  font-size: $font-size-h1;
+  color: $brown;
+  font-weight: 900;
+
+  &:hover {
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+// image gallery
+.image-gallery-container {
+  background-color: rgba(255,255,255, 0.8);
+  padding: 20px;
+  border: 1px solid rgba(0,0,0,.2);
+  box-shadow: 2px 2px 2px rgba(0,0,0,.4);
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+// google map
+.map-container {
+  border: 1px solid rgba(0,0,0,.2);
+
+  iframe {
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
 }
