--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -1,5 +1,6 @@
 // import our custom BS variables file
 @import 'variables';
+@import url('https://fonts.googleapis.com/css?family=Do+Hyeon|Open+Sans:300,400,600,800');
 
 // import main BS router file to get all BS css
 @import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
@@ -10,6 +11,27 @@ body {
   background-position: top left;
 }
 
+// Header Section
+header {
+  margin-left: -15px;
+  margin-right: -15px;
+
+  .logo-container {
+    padding: 15px;
+    display: none;
+  }
+  .navbar-brand {
+    font-weight: 900;
+    text-shadow: 0 1px 0 rgba(255,255,255,.2);
+  }
+  .navbar-nav {
+    margin-top: 0;
+  }
+}
+.hero {
+  margin-left: -15px;
+  margin-right: -15px;
+}
 .logo {
   display: block;
   font-size: $font-size-h1;
@@ -20,6 +42,12 @@ body {
     text-decoration: none;
     color: inherit;
   }
+}
+
+.body-content {
+  background-color: rgba(255,255,255,.8);
+  border-left: 1px solid rgba(0,0,0,.15);
+  border-right: 1px solid rgba(0,0,0,.15);
 }
 
 // image gallery
