--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -70,3 +70,20 @@ header {
     margin: 0;
   }
 }
+
+footer {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-top: 40px;
+  padding-top: 5px;
+  border-top: 1px solid rgba(0,0,0,.2);
+
+  h4 {
+    background: $navbar-default-bg;
+    padding: 10px;
+  }
+  li {
+    padding-top: 6px;
+    padding-bottom: 6px;
+  }
+}
