--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -50,6 +50,27 @@ header {
   border-right: 1px solid rgba(0,0,0,.15);
 }
 
+.btn {
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  text-shadow: 0 1px 0 rgba(0,0,0,.5);
+  -webkit-transition: box-shadow 1s ease-in-out, background-color .3s ease-in-out;
+  -moz-transition: box-shadow 1s ease-in-out, background-color .3s ease-in-out;
+  -ms-transition: box-shadow 1s ease-in-out, background-color .3s ease-in-out;
+  -o-transition: box-shadow 1s ease-in-out, background-color .3s ease-in-out;
+  transition: box-shadow 1s ease-in-out, background-color .3s ease-in-out;
+
+  &:hover {
+    box-shadow: 0 2px 4px rgba(0,0,0,.4);
+  }
+}
+
+.btn-info {
+  &:hover {
+    background-color: lighten($brand-info, 5%);
+    border-color: darken($brand-info, 5%);
+  }
+}
+
 // image gallery
 .image-gallery-container {
   background-color: rgba(255,255,255, 0.8);
