--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -28,10 +28,6 @@ header {
     margin-top: 0;
   }
 }
-.hero {
-  margin-left: -15px;
-  margin-right: -15px;
-}
 .logo {
   display: block;
   font-size: $font-size-h1;
@@ -44,10 +40,37 @@ header {
   }
 }
 
+.hero {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
 .body-content {
   background-color: rgba(255,255,255,.8);
   border-left: 1px solid rgba(0,0,0,.15);
   border-right: 1px solid rgba(0,0,0,.15);
+
+  section {
+    border-top: 5px solid lighten($nav-bg, 15%);
+    border-bottom: 5px solid lighten($nav-bg, 15%);
+    margin-left: -15px;
+    margin-right: -15px;
+    overflow: hidden;
+    
+    &:not(.hero) {
+      border-top: none;
+      border-top: 5px solid lighten($nav-bg, 15%);
+    }
+    &.hero {
+      border-top: none;
+    }
+
+
+    .img-container {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+  }
 }
 
 .btn {
@@ -78,12 +101,14 @@ header {
   border: 1px solid rgba(0,0,0,.2);
   box-shadow: 2px 2px 2px rgba(0,0,0,.4);
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 0 auto 15px;
 }
 
 // google map
 .map-container {
   border: 1px solid rgba(0,0,0,.2);
+  margin-left: -15px;
+  margin-right: -15px;
 
   iframe {
     border: none;
@@ -92,12 +117,12 @@ header {
   }
 }
 
+// footer
 footer {
   margin-left: -15px;
   margin-right: -15px;
-  margin-top: 40px;
   padding-top: 5px;
-  border-top: 1px solid rgba(0,0,0,.2);
+  border-top: 5px solid lighten($nav-bg, 15%);
 
   h4 {
     background: $navbar-default-bg;
@@ -106,5 +131,12 @@ footer {
   li {
     padding-top: 6px;
     padding-bottom: 6px;
+  }
+  .map-container {
+    margin-top: 10px;
+
+    iframe {
+      height: 260px !important;
+    }
   }
 }
