--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -22,7 +22,7 @@ header {
   }
   .navbar-brand {
     font-weight: 900;
-    text-shadow: 0 1px 0 rgba(255,255,255,.2);
+    text-shadow: 0 1px 0 rgba(0,0,0,.4);
   }
   .navbar-nav {
     margin-top: 0;
@@ -66,7 +66,8 @@ header {
     }
 
 
-    .img-container {
+    .img-container,
+    .embed-responsive {
       margin-left: -15px;
       margin-right: -15px;
     }
