--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -103,6 +103,26 @@ header {
   box-shadow: 2px 2px 2px rgba(0,0,0,.4);
   max-width: 1000px;
   margin: 0 auto 15px;
+
+  .gallery-navigation {
+    margin-top: 20px;
+
+    .btn {
+      border-radius: 0;
+      background-color: lighten($nav-bg, 15%);
+      color: $cream-white;
+      border-color: lighten($nav-bg, 12%);
+      padding-left: 30px;
+      padding-right: 30px;
+
+      &:hover,
+      &:focus {
+        outline: none;
+        background-color: lighten($nav-bg, 18%);
+        color: lighten($cream-white, 5%);
+      }
+    }
+  }
 }
 
 // google map
